# recast

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  test.yml
samples/: jsonorg.msgpack  jsonorg.qs  jsonorg.xml  jsonorg.yaml  people.csv  people.json  people.msgpack  people.qs  people.xml  people.yaml
src/: cli.rs  main.rs  strategy.rs  types.rs
src/strategy/: csv.rs  mod.rs  msgpack.rs  query_string.rs  toml.rs
