[package]
name = "recast"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Transforms one serialization format into another"
homepage = "https://github.com/Altair-Bueno/recast"
repository = "https://github.com/Altair-Bueno/recast"
readme = "README.md"
keywords = ["yaml", "json", "toml", "querystring", "csv"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
debug = false
lto = "fat"
codegen-units = 1
strip = true

[workspace.dependencies]
camino = "1.1.1"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
csv = "1.1.6"
enum-display = "0.1.3"
eyre = "0.6.8"
serde_json = "1.0.91"
serde_qs = "0.11.0"
serde_yaml = "0.9.16"
toml = "0.7.1"
clap_complete = "4.0.7"
itertools = "0.10.5"
serde-xml-rs = "0.6.0"
tap = "1.0.1"


[dependencies]
clap = { workspace = true }
itertools = { workspace = true }
tap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
enum-display = { workspace = true }
camino = { workspace = true }

# Supported formats
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_yaml = { workspace = true }
serde-xml-rs = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }

[build-dependencies]
clap_complete = { workspace = true }
clap = { workspace = true }
camino = { workspace = true }
enum-display = { workspace = true }
